# camera-testing

./: .gitignore  CMakeLists.txt  README.md
scripts/: download_model.sh  export_tflite_model.sh  run_tflite_camera.py
src/: main.cpp
